<?xml version="1.0"?>
<package format="2">
  <name>bot_description</name>
  <version>0.0.0</version>
  <description>The bot_description package</description>

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
